got the contact me form to work and added toggle menu

--- a/package.json
+++ b/package.json
@@ -1,21 +1,25 @@
 {
   "name": "project-react-site-server",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
+  "type": "module",
   "scripts": {
-     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
-  
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
-    "express": "^4.21.1"
+    "cors": "^2.8.5",
+    "express": "^4.21.1",
+    "joi": "^17.13.3",
+    "multer": "^1.4.5-lts.1",
+    "node-fetch": "^3.3.2",
+    "project-react-site-server": "file:"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
-  }
-
+  },
+  "description": ""
 }
