--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "mongoose": "^8.8.1",
     "multer": "^1.4.5-lts.1",
     "node-fetch": "^3.3.2",
-    "project-react-site-server": "file:"
+    "project-react-site-server": "file:",
+    "uuid": "^11.0.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
